# cjm-capability-voxtral-hf

./: .gitignore  README.md  capability.html  capability.html.md  environment.yml  index.html  plugins_test.yaml  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_capability_voxtral_hf/: _modidx.py  capability.py
cjm_transcription_plugin_voxtral_hf/: _modidx.py  meta.py  plugin.py
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: test_reconfigure.md  test_reconfigure.py  validate_voxtral_hf_e2e.md  validate_voxtral_hf_e2e.py
