[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcription-plugin-voxtral-hf"
dynamic = ["version"]
description = "Mistral Voxtral plugin for the cjm-transcription-plugin-system library - provides local speech-to-text transcription through 🤗 Transformers with configurable model selection and parameter control."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'cjm_transcription_plugin_system>=0.0.23', 'torch', 'numpy', 'soundfile', 'cjm_ffmpeg_utils>=0.0.5', 'transformers<5', 'accelerate', 'librosa', 'mistral-common[audio]']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcription-plugin-voxtral-hf"
Documentation = "https://cj-mills.github.io/cjm-transcription-plugin-voxtral-hf"

[project.entry-points.nbdev]
cjm_transcription_plugin_voxtral_hf = "cjm_transcription_plugin_voxtral_hf._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcription_plugin_voxtral_hf.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcription_plugin_voxtral_hf*"]

[tool.nbdev]
