[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-capability-voxtral-hf"
dynamic = ["version"]
description = "A Mistral Voxtral speech-to-text capability for the cjm-substrate runtime that provides local transcription through 🤗 Transformers with configurable model selection and parameter control."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'cjm-substrate>=0.0.50', 'cjm-capability-primitives>=0.0.9', 'cjm-substrate-torch-utils>=0.0.11', 'cjm-substrate-hf-utils>=0.0.12', 'torch', 'numpy', 'soundfile', 'transformers<5', 'accelerate', 'librosa', 'mistral-common[audio]']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-capability-voxtral-hf"
Documentation = "https://cj-mills.github.io/cjm-capability-voxtral-hf"

[project.entry-points.nbdev]
cjm_capability_voxtral_hf = "cjm_capability_voxtral_hf._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_capability_voxtral_hf.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_capability_voxtral_hf*"]

[tool.nbdev]
